# agent-wiki

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent-wiki.service  pyproject.toml
skills/awiki-ingest/: SKILL.md
skills/awiki-save/: SKILL.md
skills/awiki-search/: SKILL.md
src/agent_wiki/: cli.py  config.py  context.py  conversation.py  directions.py  doctor.py  fetch.py  guide.py  index.py  ingest.py  lint.py  locking.py  log.py  page.py  redact.py  remote.py  search.py  server_config.py  service.py  show.py  summarize.py  sync.py  tag_fix.py  tag_suggest.py  tag_yaml.py  tags.py  vault.py
src/agent_wiki/adapters/: __init__.py  claude_code.py  drop_zone.py  opencode.py
src/agent_wiki/data/: directions.md  guide.md
src/agent_wiki/hooks/: __init__.py  claude.py  manual.py
src/agent_wiki/server/: app.py  auth.py  routes.py  schemas.py
src/agent_wiki/skills/awiki-ingest/: SKILL.md
src/agent_wiki/skills/awiki-save/: SKILL.md
tests/: conftest.py  test_adapters_claude_code.py  test_adapters_drop_zone.py  test_adapters_opencode.py  test_cli.py  test_cli_dispatch.py  test_config.py  test_context.py  test_conversation.py  test_directions.py  test_doctor.py  test_guide.py  test_hooks.py  test_index.py  test_ingest.py  test_ingest_url.py  test_lint.py  test_locking.py  test_page.py  test_redact.py  test_remote.py  test_remote_parity.py  test_render_hash_compat.py  test_search.py  test_serve.py  test_server.py  test_server_config.py  test_service.py  test_show.py  test_skills_cli.py  test_staleness_hook.py  test_summarize.py  test_sync.py  test_tag_canonicalize.py  test_tag_cli.py  test_tag_fix.py  test_tag_ingest.py  test_tag_lint.py  test_tag_vocab.py  test_tag_yaml_writer.py  (+3 more)
