[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-wiki"
dynamic = ["version"]
description = "A personal knowledge base for AI agents"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "yake>=0.4.8",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
awiki = "agent_wiki.cli:cli"
aw = "agent_wiki.cli:cli"

[tool.hatch.version]
path = "src/agent_wiki/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
