[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwiki"
dynamic = ["version"]
description = "A personal knowledge base for AI agents"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "agentsquire>=0.2.1",
    "click>=8.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "yake>=0.4.8",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "pymupdf4llm>=0.0.17",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Permissive-licensed PDF extractor (MIT) as an alternative to the AGPL default;
# select it with `pdf_extractor: pdfplumber` in wiki.yaml.
pdf-permissive = ["pdfplumber>=0.11"]

[project.scripts]
awiki = "agent_wiki.cli:cli"
aw = "agent_wiki.cli:cli"

# Mark agent_wiki as a skill-carrying package (AgentSquire marker group). The key
# and value are the importable package name, not the CLI name. Nothing reads this
# today; it is reserved for a future environment-wide listing.
[project.entry-points."agentsquire.skills"]
agent_wiki = "agent_wiki"

[tool.hatch.version]
path = "src/agent_wiki/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
